--- a/app/templates/accion.html
+++ b/app/templates/accion.html
@@ -19,15 +19,15 @@
     <div class="text-center">
       <div class="row">
         <div class="col">
-           <h3 class="mainFontColor">Inicia sesión o registrate</h3>
+           <h3 class="mainFontColor">¿Qué quiere hacer?</h3>
         </div>
       </div>
       <br/>
       <br/>
       <div class="row">
         <div class="col">
-            <a href="{{ url_for('main.signup') }}" class="btn btn-primary">Registrarte</a> <br/> <br/>
-            <a href="{{ url_for('main.signin') }}" class="btn btn-primary">Inicia sesión</a>
+            <a href="{{ url_for('main.order_status') }}" class="btn btn-primary">Consulta el estado de tu pedido</a> <br/> <br/>
+            <a href="{{ url_for('main.location') }}" class="btn btn-primary">Realiza tu pedido</a>
         </div>
       </div>
     </div>
