--- a/app/templates/accion.html
+++ b/app/templates/accion.html
@@ -19,7 +19,7 @@
     <div class="text-center">
       <div class="row">
         <div class="col">
-           <h3 class="mainFontColor">¿Qué quiere hacer?</h3>
+           <h3 class="mainFontColor">¿Qué quieres hacer?</h3>
         </div>
       </div>
       <br/>
@@ -27,7 +27,9 @@
       <div class="row">
         <div class="col">
             <a href="{{ url_for('main.order_status') }}" class="btn btn-primary">Consulta el estado de tu pedido</a> <br/> <br/>
-            <a href="{{ url_for('main.location') }}" class="btn btn-primary">Realiza tu pedido</a>
+            <a href="{{ url_for('main.location') }}" class="btn btn-primary">Realiza tu pedido</a><br/> <br/>
+            <a href="{{ url_for('main.logout') }}" class="btn btn-primary">Cerrar sesión</a>
+
         </div>
       </div>
     </div>
