--- a/app/templates/order.html
+++ b/app/templates/order.html
@@ -18,33 +18,39 @@
         <div class="text-center">
             <div class="row">
                 <div class="col">
+                    {% if not error %}
                     <h3 class="mainFontColor">!Enhorabuena, hemos tomado tu orden!</h3>
+                    {% endif %}
                 </div>
             </div>
 
         </div>
-        <div class="container">
+        <div class="container d-flex justify-content-center mt-4">
 
             {% if error %}
             <div class="alert alert-danger">{{ error }}</div>
+            <a href="#" onclick="history.back(); return false;" class="btn btn-primary">Realiza tu pedido</a>
+
             {% endif %}
+
+            {% if not error %}
             <form method="GET">
-                <div class="row">                  
+                <div class="row">
                     <div class="col">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Pedido</h5>
-                                <ul>
+                                <ul class="list-unstyled text-muted">
+                                    <li>Detalle:</li>
+                                    <li>
+                                        {{orden.descripcion}}
+                                    </li>
                                     <li>
                                         Precio Total: {{orden.precio_total}}
                                     </li>
-                                    <li>
-                                        Pedido: {{orden.descripcion}}
-                                    </li>
-                                    <li
-                                        style="color: {{ 'orange' if orden.estado == 1 else 'blue' if orden.estado == 2 else 'green' }}">
-                                        Estado: {{ "Cocina" if orden.estado == 1 else "En camino" if orden.estado == 2
-                                        else "Entregado" }}
+                                    <li >
+                                        Estado: <strong style="color: {{ 'orange' if orden.estado == 1 else 'blue' if orden.estado == 2 else 'green' }}">{{ "Cocina" if orden.estado == 1 else "En camino" if orden.estado == 2
+                                        else "Entregado" }}</strong>
                                     </li>
                                     <li>
                                         Fecha de pedido: {{ orden.creation_date.strftime('%d/%m/%Y %H:%M:%S') }}
@@ -55,7 +61,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <a class="btn btn-primary w-100" href="{{ url_for('main.order_status') }}">Ver mis pedidos</a>
+                    </div>
+                </div>
             </form>
+            {% endif %}
 
 
         </div>
