--- a/app/templates/order_status.html
+++ b/app/templates/order_status.html
@@ -24,30 +24,33 @@
       </div>
       <br />
       <br />
-      <div class="container">
+      <div class="container d-flex justify-content-center">
 
         {% if error %}
         <div class="alert alert-danger">{{ error }}</div>
         {% endif %}
         <form method="GET">
           {% if order_details %}
-          <div class="row justify-content-center">
+          <div class="row">
 
 
             {% for item in order_details %}
-            <div class="col-auto">
+            <div class="col mt-2">
               <div class="card" style="width: 18rem;">
                 <div class="card-body">
                   <h5 class="card-title">Pedido</h5>
-                  <ul>
+                  <ul class="list-unstyled text-muted">
                     <li>
+                      Detalle
+                    </li>
+                    <li>
+                      {{item.descripcion}}
+                    </li>
+                     <li>
                       Precio Total: {{item.precio_total}}
                     </li>
                     <li>
-                      Pedido: {{item.descripcion}}
-                    </li>
-                    <li style="color: {{ 'orange' if item.estado == 1 else 'blue' if item.estado == 2 else 'green' }}">
-                      Estado: {{ "Cocina" if item.estado == 1 else "En camino" if item.estado == 2 else "Entregado" }}
+                      Estado: <strong style="color: {{ 'orange' if item.estado == 1 else 'blue' if item.estado == 2 else 'green' }}">{{ "Cocina" if item.estado == 1 else "En camino" if item.estado == 2 else "Entregado" }}</strong>
                     </li>
                     <li>
                       Fecha de pedido: {{ item.creation_date.strftime('%d/%m/%Y %H:%M:%S') }}
@@ -59,6 +62,16 @@
             </div>
             {% endfor %}
           </div>
+           <div class="row mt-3">
+                    <div class="col-md-12">
+                      <a href="{{ url_for('main.accion') }}" class="btn btn-primary w-100">Inicio</a>
+                    </div>
+                </div>
+
+          {% else %}
+            <h3 class="text-white">Aún no tienes pedidos.</h3><br>
+            <a href="{{ url_for('main.location') }}" class="btn btn-primary">Realiza tu pedido</a>
+
           {% endif %}
         </form>
 
